--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ Typography
 p {
   font-size: 15px;
   line-height: 29px;
-  color: rgba(28, 54, 83, 0.6);
+  color: rgba(28, 54, 83, 0.81);
   padding-bottom: 20px; }
 
 h1 {
@@ -74,7 +74,8 @@ h5 {
   border-color: #F8806F; }
 
 .btn-small {
-  padding: 8px 40px; }
+  /* padding: 8px 40px; */ 
+  padding: 15px 40px; }
 
 .btn-large {
   padding: 15px 40px; }
@@ -368,7 +369,7 @@ Hero
 ========================================================================== */
 .hero {
   min-height: 750px;
-  background: url("../img/bigbasin-hero.jpg") center center;
+  background: url("../photos/bigbasin-hero-60.jpg") center center;
   background-size: cover;
   position: relative; }
   .hero .down-arrow a {
@@ -393,7 +394,7 @@ Hero
 
 .fixed {
   position: fixed;
-  background-color: #232731;
+  background-color: #2C3A47;
   z-index: 999;
   width: 100%; }
 
@@ -406,7 +407,7 @@ header {
   -webkit-transition: padding 300ms ease-in-out;
           transition: padding 300ms ease-in-out; }
   header a {
-    color: #fff;
+    color: #C8AD78;
     text-transform: uppercase;
     font-size: 15px; }
     header a.login {
@@ -423,7 +424,9 @@ header {
         padding-right: 25px; }
         header ul.primary-nav li a:hover {
           /* color: #FF5274; */
-          color: #FF5F69; }
+          /* color: #FF5F69; peach? */ 
+          /* color: #F5D7CD; blush pink */
+          color: #E84547; }
       header ul.primary-nav li:last-child a {
         padding-right: 0px; }
   header ul.member-actions li {
@@ -645,7 +648,8 @@ Features-stack
     margin-top: 20px; }
   .blog .blog-img-wrap {
     position: relative;
-    overflow: hidden; }
+    overflow: hidden; 
+    width: 400px; }
     .blog .blog-img-wrap .overlay {
       position: absolute;
       width: 100%;
@@ -700,13 +704,13 @@ Features-stack
       width: 82px;
       height: auto; }
   .testimonial-slider h2 {
-    color: #fff;
+    color: #D3B983;
     font-size: 40px;
     font-weight: 300;
     font-style: italic;
     margin: 30px 0; }
   .testimonial-slider p {
-    color: #ACB1B4;
+    color: #EEEEEE;
     /* text-transform: uppercase; 
     letter-spacing: 2px; */ }
 
@@ -807,9 +811,9 @@ footer {
     color: #ACB1B4;
     font-size: 13px; }
   footer a {
-    color: #fff; }
+    color: #C8AD78; }
   footer a:hover {
-    color: #FF5274; }
+    color: #F5D7CD; }
   footer ul.footer-group {
     border-top: solid 1px #4E566C;
     padding-top: 25px;
