--- a/css/styles.css
+++ b/css/styles.css
@@ -369,7 +369,7 @@ Hero
 ========================================================================== */
 .hero {
   min-height: 750px;
-  background: url("../photos/bigbasin-hero-60.jpg") center center;
+  background: url("../photos/bigbasin-hero-60-min.jpg") center center;
   background-size: cover;
   position: relative; }
   .hero .down-arrow a {
@@ -573,7 +573,7 @@ Features-stack
 ========================================================================== */
 .hero-strip {
   margin-top: 120px;
-  background: #333844 url("../img/beach01.jpg") no-repeat center center;
+  background: #333844 url("../photos/beach01-min.jpg") no-repeat center center;
   padding-bottom: 190px;
   position: relative; }
   .hero-strip i {
@@ -649,12 +649,12 @@ Features-stack
   .blog .blog-img-wrap {
     position: relative;
     overflow: hidden; 
-    width: 400px; }
+    width: 100%; }
     .blog .blog-img-wrap .overlay {
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, 0.5);
+      /* background-color: rgba(255, 255, 255, 0.5); white */ 
       -webkit-transition: all 300ms ease-in-out;
       transition: all 300ms ease-in-out;
       -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
