--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,8 @@ Features-stack
 ========================================================================== */
 .hero-strip {
   margin-top: 120px;
-  background: #333844 url("../photos/beach01-web.jpg") no-repeat center center;
+  background: #333844 url("../photos/beach01-web.jpg") no-repeat center center; 
+  background-size: cover;
   padding-bottom: 190px;
   position: relative; }
   .hero-strip i {
