Load mobile optimized images for small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -365,11 +365,32 @@ Navigation
           transition: all 300ms ease-in-out; }
 
 /* ==========================================================================
+ Mobile
+========================================================================== */
+@media only screen and (max-width: 480px) {
+.hero {
+  background: url("../photos/bigbasin-hero-60-min.jpg") center center; }
+.hero-strip {
+  background: #333844 url("../photos/beach01-web.jpg") no-repeat center center;  }
+  .testimonial-slider {
+  background: url("../photos/faq-hakone-web.jpg") no-repeat center center; }
+}
+/* ==========================================================================
+ Desktop
+========================================================================== */
+@media only screen and (min-width: 481px) {
+.hero {
+  background: url("../photos/bigbasin-hero-60.jpg") center center; }
+.hero-strip {
+  background: #333844 url("../photos/beach01.jpg") no-repeat center center; }
+  .testimonial-slider {
+  background: url("../photos/faq-hakone.jpg") no-repeat center center; }
+}
+/* ==========================================================================
 Hero
 ========================================================================== */
-.hero {
+  .hero {
   min-height: 750px;
-  background: url("../photos/bigbasin-hero-60-min.jpg") center center;
   background-size: cover;
   position: relative; }
   .hero .down-arrow a {
@@ -573,7 +594,6 @@ Features-stack
 ========================================================================== */
 .hero-strip {
   margin-top: 120px;
-  background: #333844 url("../photos/beach01-web.jpg") no-repeat center center; 
   background-size: cover;
   padding-bottom: 190px;
   position: relative; }
@@ -690,7 +710,6 @@ Features-stack
 .testimonial-slider
 ========================================================================== */
 .testimonial-slider {
-  background: url("../photos/faq-hakone-web.jpg") no-repeat center center;
   background-size: cover; }
   .testimonial-slider .avatar {
     width: 82px;
